robot  Adding: [[gd:Tiomor an Ear]]

--- a/Timor_Est.mw
+++ b/Timor_Est.mw
@@ -195,6 +195,7 @@ Pobel Timor Est a wra sywya an fay [[katholik]]. Ynsi a wra kewsel leun a davoso
 [[fr:Timor oriental]]
 [[frp:Timor orientâl]]
 [[fy:East Timor]]
+[[gd:Tiomor an Ear]]
 [[gl:Timor Leste - Timor Lorosa'e]]
 [[he:מזרח טימור]]
 [[hi:पूर्वी तीमोर]]
