--- a/Paraná.mw
+++ b/Paraná.mw
@@ -78,12 +78,12 @@
 <gallery>
 Image:Pinheiros2.jpg
 Image:Jbctba.jpg
-Image:Cataratas do Iguaçu.jpeg
+Image:FozDoIguaçu.JPG
 Image:PicoParana2006-3.jpg
 Image:Museu Oscar Niemeyer 7 Curitiba Brasil.jpg
 Image:ItaipuAerea2AAL.jpg
 Image:VilaVelhaParanaTaca3.JPG
-
+Image:Colônia Batavo1.jpg
 Image:Bus_Stops_3_curitiba_brasil.jpg
 Image:Curitiba-27-1-.jpg
 Image:Universidade_Federal_do_Parana_3_Curitiba_Parana.jpg
@@ -91,7 +91,6 @@ Image:Brejatuba.JPG
 
 </gallery>
 |}
-
 
 ==Net==
 *http://www.pr.gov.br
