--- a/Wikipedya.mw
+++ b/Wikipedya.mw
@@ -144,7 +144,7 @@ Yma derivadow pella orth an [[Pennfolenn/Penfolen|Bennfolenn]] hag yn tavosow er
 [[sc:Wikipedia]]
 [[scn:Wikipedia]]
 [[sco:Wikipaedia]]
-[[sd:وڪيچيڪلو]]
+[[sd:وڪيپيڊياا]]
 [[sh:Wikipedia]]
 [[si:විකිපීඩියා]]
 [[simple:Wikipedia]]
