robot  Modifying: [[no:Skotsk-gælisk]]

--- a/Albanek.mw
+++ b/Albanek.mw
@@ -77,7 +77,7 @@
 [[nds:Schottsch Gäälsch]]
 [[nl:Schots-Gaelisch]]
 [[nn:Skotsk gælisk språk]]
-[[no:Skotsk gælisk]]
+[[no:Skotsk-gælisk]]
 [[nrm:Êcôssais]]
 [[oc:Escocés]]
 [[pl:Język szkocki gaelicki]]
