--- a/Sarf.mw
+++ b/Sarf.mw
@@ -26,6 +26,7 @@ Serf yw pur gemmyn yn powyow trovannel a'n [[Dor|bys ma]], r.e. [[Eynda]] po [[B
 [[fi:Käärmeet]]
 [[fr:Serpentes]]
 [[gl:Cobra]]
+[[glk:میلؤم]]
 [[he:נחשים]]
 [[hr:Zmije]]
 [[hu:Kígyók]]
