--- a/Almayn.mw
+++ b/Almayn.mw
@@ -178,6 +178,7 @@ Aswonnys avel [[Taves ranndiryel|tavosow ranndiryel]] yw [[Danek]], [[Sorbek]], 
 [[oc:Alemanha]]
 [[os:Герман]]
 [[pa:ਜ੍ਰਮਨੀ]]
+[[pag:Germany]]
 [[pam:Alemania]]
 [[pdc:Deitschland]]
 [[pih:Doichland]]
