robot  Adding: [[jv:Trinidad lan Tobago]]

--- a/Trynses_ha_Tobago.mw
+++ b/Trynses_ha_Tobago.mw
@@ -89,6 +89,7 @@ An '''Repoblek Trynses ha Tobago''' (yn [[Sowsnek]], ''Republic of Trinidad and 
 [[is:Trínidad og Tóbagó]]
 [[it:Trinidad e Tobago]]
 [[ja:トリニダード・トバゴ]]
+[[jv:Trinidad lan Tobago]]
 [[kn:ಟ್ರಿನಿಡಾಡ್ ಮತ್ತು ಟೊಬೆಗೊ]]
 [[ko:트리니다드 토바고]]
 [[ku:Trînîdad û Tobago]]
