--- a/Trujillo_(stat).mw
+++ b/Trujillo_(stat).mw
@@ -29,6 +29,7 @@ mappa=Venezuela-trujillo.jpg|
 
 [[an:Estato Trujillo]]
 [[ca:Estat de Trujillo]]
+[[da:Trujillo (delstat)]]
 [[en:Trujillo (state)]]
 [[es:Trujillo (estado)]]
 [[fr:État de Trujillo]]
