robot  Adding: [[jv:Kapuloan Turks lan Caicos]]

--- a/Turks_ha_Kaykos.mw
+++ b/Turks_ha_Kaykos.mw
@@ -77,6 +77,7 @@ An '''Turks ha Kaykos''' (yn [[Sowsnek]], ''Turks and Caicos Islands'') yw tired
 [[is:Turks- og Caicoseyjar]]
 [[it:Turks e Caicos]]
 [[ja:タークス・カイコス諸島]]
+[[jv:Kapuloan Turks lan Caicos]]
 [[ko:터크스 케이커스 제도]]
 [[lij:Turks e Caicos]]
 [[lt:Terkso ir Kaikoso salos]]
