The file [[:Image:Flag_of_Northern_Ireland.svg]] has been replaced by [[:Image:Ulster_banner.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Wordhen_Gledh.mw
+++ b/Wordhen_Gledh.mw
@@ -2,7 +2,7 @@
 {| align="right" border="0" rules="all" width="300px" cellpadding="4" cellspacing="0"  style="margin: 0 0 1em 1em; border: 1px solid #999; border-right-width: 2px; border-bottom-width: 2px; background-color: aliceblue"
 ! colspan="2" style="background-color: #bbdefd" |<font size="4">'''Northern Ireland'''</font><br><font size="3">'''Tuaisceart na hÉireann'''</font><br><font size="3">'''Norlin Airlann'''</font>
 |-
-|colspan="2" align=center| <font size="-1">'''''Nyns eus baner soedhogel dhe Iwerdhon&nbsp;Gledh y'n eur ma.''' An baner a-is yw devnydhys nepprys, rag ensompel gans bagasow sport.''</font><br>[[Image:Flag of Northern Ireland.svg|120px|center|Kyns baner Iwerdhon Gledh]]
+|colspan="2" align=center| <font size="-1">'''''Nyns eus baner soedhogel dhe Iwerdhon&nbsp;Gledh y'n eur ma.''' An baner a-is yw devnydhys nepprys, rag ensompel gans bagasow sport.''</font><br>[[Image:Ulster_banner.svg|120px|center|Kyns baner Iwerdhon Gledh]]
 |-
 |colspan="2" align=center| <font size="-1">''Quis separabit?''</font><br><font size="-1">''([[Latin]]: Piw a dhibertha?)''</font>
 |-
