robot  Adding: bpy, ht, lij, ln, ml, qu, wo Modifying: ar

--- a/Sahara_West.mw
+++ b/Sahara_West.mw
@@ -32,10 +32,11 @@
 [[af:Wes-Sahara]]
 [[am:ምዕራባዊ ሣህራ]]
 [[an:Sajara Ozidental]]
-[[ar:الصحراء الغربية]]
+[[ar:صحراء غربية]]
 [[ast:Sahara Occidental]]
 [[bg:Западна Сахара]]
 [[bo:ནུབ་སར་ཧ་ལ]]
+[[bpy:ৱেস্টার্ন সাহারা]]
 [[bs:Zapadna Sahara]]
 [[ca:Sàhara Occidental]]
 [[cs:Západní Sahara]]
@@ -56,6 +57,7 @@
 [[he:סהרה המערבית]]
 [[hr:Zapadna Sahara]]
 [[hsb:Zapadna Sahara]]
+[[ht:Sahara oksidantal]]
 [[hu:Nyugat-Szahara]]
 [[id:Sahara Barat]]
 [[is:Vestur-Sahara]]
@@ -65,9 +67,12 @@
 [[kk:Батыс Сахар]]
 [[ko:서사하라]]
 [[la:Sahara Occidentalis]]
+[[lij:Sahara Oççidentâ]]
+[[ln:Sahara ya Limbɛ]]
 [[lt:Vakarų Sachara]]
 [[lv:Rietumsahāra]]
 [[mk:Западна Сахара]]
+[[ml:പശ്ചിമ സഹാറ]]
 [[ms:Sahara Barat]]
 [[nl:Westelijke Sahara]]
 [[nn:Vest-Sahara]]
@@ -77,6 +82,7 @@
 [[pl:Sahara Zachodnia]]
 [[ps:لوېديځه صحارا]]
 [[pt:Saara Ocidental]]
+[[qu:Kunti Sahara]]
 [[ro:Sahara Occidentală]]
 [[ru:Западная Сахара]]
 [[se:Oarje-Sahára]]
@@ -94,5 +100,6 @@
 [[uk:Західна Сахара]]
 [[vo:Vesüda-Saharän]]
 [[wa:Sara coûtchantrece]]
+[[wo:Sahara gu Sowwu]]
 [[zh:西撒哈拉]]
 [[zh-min-nan:Sai Sahara]]
