robot  Modifying: [[nl:Wrexham]]

--- a/Wreksam.mw
+++ b/Wreksam.mw
@@ -7,7 +7,7 @@ Trev an mogha yn [[Kembra]] Gleth yw Wreksam ([[Kembrek]]: ''Wrecsam'', [[Sawsne
 [[en:Wrexham]]
 [[fr:Wrexham]]
 [[it:Wrexham]]
-[[nl:Wrexham (Wales)]]
+[[nl:Wrexham]]
 [[no:Wrexham]]
 [[pl:Wrexham]]
 [[pt:Wrexham]]
