robot  Adding: [[lt:Jukatano valstija]]

--- a/Yucatán.mw
+++ b/Yucatán.mw
@@ -61,6 +61,7 @@
 [[it:Yucatán]]
 [[ja:ユカタン州]]
 [[la:Iucatania]]
+[[lt:Jukatano valstija]]
 [[nah:Yucatán]]
 [[nl:Yucatán (staat)]]
 [[no:Yucatán (delstat)]]
