robot  Adding: [[ay:Ñuñuri]]

--- a/Bronnvil.mw
+++ b/Bronnvil.mw
@@ -34,6 +34,7 @@ An klas ''Mammalia'' a gomprehend nebes 5500 eghenn rennys yn 152 deylu ha bys 4
 [[ang:Sycedēor]]
 [[ar:ثدييات]]
 [[ast:Mamíferu]]
+[[ay:Ñuñuri]]
 [[az:Məməlilər]]
 [[bar:Spofiecha]]
 [[bat-smg:Žėndoulē]]
