robot  Adding: [[vec:Ìxołe Åland]]

--- a/Åland.mw
+++ b/Åland.mw
@@ -104,5 +104,6 @@ An '''Ynysow Åland''' ('''''Landskapet Åland''''' yn [[Swedek]], '''''Ahvenanm
 [[th:หมู่เกาะโอลันด์]]
 [[tr:Åland]]
 [[uk:Аландські острови]]
+[[vec:Ìxołe Åland]]
 [[wo:Dunu Aland]]
 [[zh:奥兰 (芬兰)]]
