--- a/Pryv.mw
+++ b/Pryv.mw
@@ -26,6 +26,7 @@ Synsys yn bagasow pryv usi niver veur a enyvales pur dhihaval aga gwreydh genyne
 [[de:Würmer]]
 [[el:Σκουλήκι]]
 [[en:Worm]]
+[[eo:Vermo]]
 [[es:Gusano]]
 [[fr:Ver]]
 [[gd:Cnuimh]]
