robot  Adding: [[qu:Falmouth (Cornwall)]]

--- a/Aberfala.mw
+++ b/Aberfala.mw
@@ -18,5 +18,6 @@ Aberfal a wra rann a bastell-vro [[Aberfal ha Kammbronn]] yn [[Senedh an Rywvane
 [[nl:Falmouth (Cornwall)]]
 [[no:Falmouth (Cornwall)]]
 [[pl:Falmouth (Anglia)]]
+[[qu:Falmouth (Cornwall)]]
 [[sv:Falmouth]]
 [[vo:Falmouth (Cornwall)]]
