robot  Adding: [[sh:Acre (federalna brazilska država)]]

--- a/Acre_(stat).mw
+++ b/Acre_(stat).mw
@@ -75,6 +75,7 @@
 [[pt:Acre]]
 [[ro:Acre]]
 [[ru:Акри]]
+[[sh:Acre (federalna brazilska država)]]
 [[simple:Acre (state)]]
 [[sr:Акри]]
 [[sv:Acre (delstat)]]
