--- a/Akrotiri_ha_Dhekelia.mw
+++ b/Akrotiri_ha_Dhekelia.mw
@@ -27,6 +27,7 @@
 [[id:Akrotiri dan Dhekelia]]
 [[it:Akrotiri e Dhekelia]]
 [[ja:アクロティリおよびデケリア]]
+[[jv:Akrotiri lan Dhekelia]]
 [[kk:Акротири және Декелия]]
 [[ko:아크로티리 데켈리아]]
 [[li:Akrotiri en Dhekelia]]
