--- a/Antillys_Iseldiryek.mw
+++ b/Antillys_Iseldiryek.mw
@@ -83,6 +83,7 @@ An '''Antillys Iseldiryek''' (yn [[Iseldiryek]], ''Nederlandse Antillen'') yw ti
 [[is:Hollensku Antillaeyjar]]
 [[it:Antille olandesi]]
 [[ja:オランダ領アンティル]]
+[[jv:Antillen Walanda]]
 [[kk:Антийлер]]
 [[ko:네덜란드령 안틸레스]]
 [[li:Nederlandse Antille]]
