robot  Adding: [[jv:Panté Gadhing]]

--- a/Côte_d'Ivoire.mw
+++ b/Côte_d'Ivoire.mw
@@ -96,6 +96,7 @@
 [[is:Fílabeinsströndin]]
 [[it:Costa d'Avorio]]
 [[ja:コートジボワール]]
+[[jv:Panté Gadhing]]
 [[ka:კოტ-დ'ივუარი]]
 [[kg:Kodivwa]]
 [[kk:Кот-д-Ивуар]]
