*Empty MediaWiki Message*

--- a/Asturyek.mw
+++ b/Asturyek.mw
@@ -2,7 +2,7 @@
 ! colspan="2" bgcolor="#ffff88" style="font-size:110%"| Asturyek ''(Bable)''
 |-
 | valign="top"|Kewsys yn:
-|[[Spayn]] ([[Asturya]])
+|[[Spayn]] ([[Asturya]] ha [[Leon]]) ha [[Portyngal]] ([[Miranda do Douro]])
 |-
 | valign="top"|Kewsys gans:
 |100 000
@@ -31,7 +31,7 @@
 |SIL|| AST
 |}
 
-'''Asturyek''' ('''''asturianu''''') yw yeth [[romanek]] a-dhiworth [[Spayn]] wostalleth, ha kewsys y'n eur ma gans 100.000 a dus yn [[Asturya]]. An taves ma a wra sort a gevrenn yntra [[Galijek]]/[[Portyngalek]] ha [[Spaynek|Kastilek]].
+'''Asturyek''' ('''''asturianu''''') yw yeth [[romanek]] a-dhiworth [[Spayn]] wostalleth, ha kewsys y'n eur ma gans 100.000 a dus yn [[Asturya]], [[Leon]] ha [[Portyngal]]. An taves ma a wra sort a gevrenn yntra [[Galijek]]/[[Portyngalek]] ha [[Spaynek|Kastilek]].
 
 {{stokk-yeth}}
 
@@ -42,6 +42,7 @@
 
 [[Klass:Yethow romanek]]
 [[Klass:Spayn]]
+[[Klass:Portyngal]]
 
 [[af:Asturies]]
 [[an:Idioma asturiano]]
