Tony Tan Keng Yam

--- a/Singapour.mw
+++ b/Singapour.mw
@@ -20,7 +20,7 @@
 |-
 |Brassa sita || Singapour
 |-
-|Lywydh || [[Sellapan Ramanathan]]
+|Lywydh || [[Tony Tan Keng Yam]]
 |-
 |Pennmenyster || [[Lee Hsien Loong]]
 |-
