*Empty MediaWiki Message*

--- a/Tocantins_(stat).mw
+++ b/Tocantins_(stat).mw
@@ -10,7 +10,7 @@
 |-
 | '''Brassa sita''' || [[Palmas, Tocantins|Palmas]]
 |-
-| '''Governour''' || [[Marcelo Miranda]]
+| '''Governour''' || [[Siqueira Campos]]
 |- valign="top"
 | '''[[Enep]]'''
 | 278,420.7 km² (9{{ves}})
