--- a/Teksas.mw
+++ b/Teksas.mw
@@ -5,7 +5,7 @@ hanow_Kernewek=Teksas |
 image_blason= Seal of Texas.svg|
 motto= Friendship |
 nickname=Lone Star State |
-image_map=Map of USA highlighting Texas.png |
+image_map=Map of USA TX.svg |
 capital=[[Austin, Teksas|Austin]] |
 largest_city=[[Houston, Teksas|Houston]] |
 governor=[[Rick Perry]] |
