*Empty MediaWiki Message*

--- a/Ynys_Manow.mw
+++ b/Ynys_Manow.mw
@@ -22,7 +22,7 @@
 |-
 |Arloedh Manow || [[Elisabeth II a'n Rywvaneth Unys|Elisabeth II]]
 |-
-|Lieutenant Governour || Vice Admiral Sir [[Paul Haddacks]]
+|Lieutenant Governour || [[Adam Wood]]
 |-
 |Ard-Choyrlagh || [[James Anthony Brown]]
 |-
