*Empty MediaWiki Message*

--- a/Kaliforni.mw
+++ b/Kaliforni.mw
@@ -8,8 +8,8 @@ nickname=The Golden State |
 image_map=Map of USA highlighting California.png |
 capital=[[Sacramento, Kaliforni|Sacramento]] |
 largest_city=[[Los Angeles, Kaliforni|Los Angeles]] |
-governor=[[Arnold Schwarzenegger]] |
-party=Repobloger |
+governor=[[Jerry Brown]] |
+party=Gwerinel |
 total_area=410,000 |
 area_rank=3{{sa}} |
 area_land=404,298 |
