*Empty MediaWiki Message*

--- a/Asturya.mw
+++ b/Asturya.mw
@@ -15,7 +15,7 @@
 | ISO = O
 | chi isel = 8
 | chi ughel = 2
-| Lywydh = Vicente Alberto Álvarez Areces
+| Lywydh = Francisco Álvarez-Cascos Fernández
 | desedhans = Locator map of Asturias.png
 }}
 
