--- a/Botswana.mw
+++ b/Botswana.mw
@@ -4,7 +4,7 @@
 | colspan="2" style="background:#efefef;" align="center" |
 {| style="background:#efefef;"
 |align="center" | [[Restren:Flag of Botswana.svg|150px|Baner Botswana]]
-|align="center" width="140px"| [[Restren:Arms of Botswana.svg|100px|Kota arvow Botswana]]
+|align="center" width="140px"| [[Restren:Coat_of_Arms_of_Botswana.svg|100px|Kota arvow Botswana]]
 |- align="center" width="140px"
 | (Baner Botswana) 
 | (Kota arvow Botswana)
