r2.6.5) (robot ow keworra: [[lt:Priebalsis]]

--- a/Kessonen.mw
+++ b/Kessonen.mw
@@ -69,6 +69,7 @@ Yn lytherennegi skrifys, '''kessonenn''' yw [[lytherenn]] ow styrya (dell vydh u
 [[lmo:Cunsunant]]
 [[ln:Molelisi]]
 [[lo:ພະຍັນຊະນະ]]
+[[lt:Priebalsis]]
 [[lv:Līdzskanis]]
 [[ml:വ്യഞ്ജനം]]
 [[mr:व्यंजन]]
