r2.6.5) (robot ow keworra: [[frr:Regiuun Syddanmark]]

--- a/Region_Syddanmark.mw
+++ b/Region_Syddanmark.mw
@@ -40,6 +40,7 @@
 [[fa:سیددانمارک]]
 [[fi:Etelä-Tanska]]
 [[fr:Danemark-du-Sud]]
+[[frr:Regiuun Syddanmark]]
 [[hr:Južna Danska]]
 [[hu:Syddanmark régió]]
 [[id:Region Syddanmark]]
