--- a/Côte_d'Ivoire.mw
+++ b/Côte_d'Ivoire.mw
@@ -16,11 +16,11 @@
 |-
 |[[Yeth]] soedhogel || [[Frynkek]]
 |-
-|Pennsita || [[Yamoussoukro]], [[Abidjan]]
+|Pennsita || [[Yamoussoukro]] ''(soedhogel)'', [[Abidjan]]
 |-
 |Brassa sita || [[Abidjan]]
 |-
-|Lywydh || [[Laurent Gbagbo]]
+|Lywydh || [[Alassane Ouattara]]
 |-
 |Pennmenyster || [[Guillaume Soro]]
 |-
