--- a/Tunisi.mw
+++ b/Tunisi.mw
@@ -22,7 +22,7 @@
 |-
 |Lywydh || [[Fouad Mebazaa]] (rag an termyn)
 |-
-|Pennmenyster || [[Mohamed Ghannouchi]] 
+|Pennmenyster || [[Beji Caid el Sebsi]] 
 |-
 |[[Enep]] || 163,610 km²
 |-
