--- a/Nepal.mw
+++ b/Nepal.mw
@@ -22,7 +22,7 @@
 |-
 |Lewydh || Ram Baran Yadav
 |-
-|Pennmenyster || [[Jhala Nath Khanal]]
+|Pennmenyster || [[Baburam Bhattarai]]
 |-
 |[[Enep|Braster]] || 147,181 km²
 |-
