r2.6.5) (robot ow keworra: [[cs:Hindustánština]]

--- a/Hindoustanek.mw
+++ b/Hindoustanek.mw
@@ -64,6 +64,7 @@ Unn rannyeth Hindoustanek a's kewsir gans an poblans eyndek a [[Fiji]].
 [[br:Hindoustaneg]]
 [[bs:Hindi-Urdu]]
 [[ca:Hindustànic]]
+[[cs:Hindustánština]]
 [[de:Hindustani]]
 [[en:Hindi-Urdu]]
 [[es:Idioma indostánico]]
