*Empty MediaWiki Message*

--- a/Anna_a_Vreten_Vyghan.mw
+++ b/Anna_a_Vreten_Vyghan.mw
@@ -2,8 +2,15 @@
 
 '''Anna''' (25 Genver 1477 – 9 Genver 1514) o Duges a [[Breten Vian|Vreten Vyghan]] a-dhia 1488 bys 1514. Genys yn 1477, dug [[Francis II a Vreten Vyghan]] hag [[Margaret]] o hi.
 
+
+
+
+
+
 {{sequence|
 prev=[[Fransis II a Vreten Vyghan]]|
 list=[[Dugeth Vreten Vyghan|Duges Vreten Vyghan]]'''<br />1488—1514|
 next=[[Klowda a Frynk]]
 }}
+
+[[en:Anne of Brittany]]
