--- a/Anna_a_Vreten_Vyghan.mw
+++ b/Anna_a_Vreten_Vyghan.mw
@@ -1,6 +1,6 @@
 [[Restren:Anne de Bretagne-Jean Bourdichon-reverse.jpg|right|thumb|250px|Anna a Vreten Vyghan]]
 
-'''Anna''' (25 Genver 1477 – 9 Genver 1514) o Duges a [[Breten Vian|Vreten Vyghan]] a-dhia 1488 bys 1514. Genys yn 1477, dug [[Francis II a Vreten Vyghan]] hag [[Margaret]] o hi.
+'''Anna''' (25 Genver 1477 – 9 Genver 1514) o Duges a [[Breten Vian|Vreten Vyghan]] a-dhia 1488 bys 1514. Genys yn 1477, dug [[Francis II a Vreten Vyghan]] hag [[Margaret a Foix]] o hi.
 
 
 
