--- a/Beunans_Meriasek.mw
+++ b/Beunans_Meriasek.mw
@@ -30,3 +30,4 @@ N<small>ESSA</small> R<small>ANN</small>
 [[Category:Kernowek]]
 [[Category:Ystory Kernow]]
 [[br:Beunans Meriasek]]
+[[en:Beunans Meriasek]]
