--- a/Kastil-La_Mancha.mw
+++ b/Kastil-La_Mancha.mw
@@ -15,7 +15,7 @@
 | ISO = CM
 | chi isel = 20
 | chi ughel = 22
-| Lywydh = José María Barreda Fontes
+| Lywydh = María Dolores de Cospedal
 | desedhans = Locator map of Castille-La Mancha.png
 }}
 
