--- a/Aragon.mw
+++ b/Aragon.mw
@@ -15,7 +15,7 @@
 | ISO = AR
 | chi isel = 13
 | chi ughel =  12
-| Lywydh = Marcelino Iglesias Ricou
+| Lywydh = Luisa Fernanda Rudi
 | desedhans = Localizaci%C3%B3n_de_Arag%C3%B3n_%28NUTS_ES5%29.png
 }}
 
