--- a/Extremadura.mw
+++ b/Extremadura.mw
@@ -15,7 +15,7 @@
 | ISO = EX
 | chi isel = 10
 | chi ughel = 2
-| Lywydh = Juan Carlos Rodríguez Ibarra
+| Lywydh = José Antonio Monago Terraza
 | desedhans = Locator map of Extremadura.png
 }}
 
