*Empty MediaWiki Message*

--- a/Asturya.mw
+++ b/Asturya.mw
@@ -1,6 +1,6 @@
 {{Kemmynieth Omrewl Spayn | kemmynieth=Comunidá Autónoma del Principáu d'Asturies <br /> Comunidad Autónoma del Principado de Asturias
-| baner=Flag of Asturias (indoor).svg
-| arvow=Escudo de Asturias.png
+| baner=Flag of Asturias.svg
+| arvow=Escudo de Asturias.svg
 | pennsita=[[Oviedo]](yn [[Spaynek]]/Uviéu (yn [[Asturek]])
 | renk=10ves
 | enep=10&nbsp;604
