--- a/Icon_in_Me.mw
+++ b/Icon_in_Me.mw
@@ -1,4 +1,4 @@
-'''Icon in me''' yw band rokk a [[Moskva]], [[Russi]]. Eseli "Icon in me" yw Tony JJ, D. Frans, Artyom, Konstantin hag Morten.
+'''Icon in me''' yw band rokk a [[Moskva]], [[Russi]]. Eseli "Icon in me" yw Tony JJ, D. Frans, Artyom hag Morten.
 
 == Sidiow ==
 
