r2.6.5) (robot ow chanjya: [[fr:Panama]]

--- a/Panama.mw
+++ b/Panama.mw
@@ -91,7 +91,7 @@ An '''Repoblek Panama''' (yn [[Spaynek]], ''República de Panamá'') yw gwlas yn
 [[fi:Panama]]
 [[fiu-vro:Panama]]
 [[fo:Panama]]
-[[fr:Panamá]]
+[[fr:Panama]]
 [[frp:Panama]]
 [[frr:Panama]]
 [[fy:Panama]]
