r2.6.5) (robot ow chanjya: [[na:Ripubrikin Kongo]]

--- a/Repoblek_Kongo.mw
+++ b/Repoblek_Kongo.mw
@@ -127,7 +127,7 @@ An '''Repoblek Kongo''' (yn [[Frynkek]], ''République du Congo'') yw gwlas yn [
 [[mn:Бүгд Найрамдах Конго Улс]]
 [[mr:काँगोचे प्रजासत्ताक]]
 [[ms:Republik Congo]]
-[[na:Republik Congo]]
+[[na:Ripubrikin Kongo]]
 [[nah:Tlācatlahtohcāyōtl in Congo]]
 [[nds:Republiek Kongo]]
 [[nl:Congo-Brazzaville]]
