*Empty MediaWiki Message*

--- a/Libi.mw
+++ b/Libi.mw
@@ -3,7 +3,7 @@
 |-
 | colspan="2" style="background:#efefef;" align="center" |
 {| style="background:#efefef;"
-|align="center" | [[Restren:flag_of_Libya.png|150px|Baner Libi]]
+|align="center" | [[Restren:flag_of_Libya.svg|150px|Baner Libi]]
 |align="center" width="140px"|[[Restren:Coat_of_arms_of_Libya.svg|100px|Kota Arvow Libi]]
 |- align="center" width="140px"
 | (Baner Libi) 
