*Empty MediaWiki Message*

--- a/Torino.mw
+++ b/Torino.mw
@@ -5,7 +5,7 @@
 |-
 | colspan="2" style="background:#efefef;" align="center" |
 {| style="background:#efefef;"
-|align="center" width="140px"|[[Restren:Torino-Stemma.png|100px|Kota arvow Torino]]
+|align="center" width="140px"|[[Restren:Turin coat of arms.svg|100px|Kota arvow Torino]]
 |- align="center" width="140px"
 | (Kota arvow Torino)
 |}
