--- a/Konteth_Flint.mw
+++ b/Konteth_Flint.mw
@@ -5,6 +5,7 @@ Yma [[Koed-Le]]/Koed-Lé yw penntrev ynno.
 An efander pen yw governyes dre an Consel Keverang Konteth Flint.
 
 [[Category:Kembra]]
+[[Category:Konteth yn Kembra]]
 
 [[be:Флінтшыр]]
 [[bg:Флинтшър]]
