--- a/Wolfgang_Amadeus_Mozart.mw
+++ b/Wolfgang_Amadeus_Mozart.mw
@@ -1,6 +1,33 @@
 [[Restren:W A Mozart at 21c.jpg|right|thumb|Lymnans a Mozart gwrys yn 1777 gans lymner anwodhvos.]]
 '''Joannes Chrysostomus Wolfgang Theopilus Mozart''' ([[18ves kansblydhen|1756–1791]]) o [[komposydh]] a vri pur vras. Y triga va y'n [[Sans Emperoureth Romanek]], po [[Estrych]] arnowydh ([[Salzburg]] ha [[Wien]]). Kyn ferwis ev ha pur yowynk, y skrifa 23 gwari-kan, moy es 41 ''sinfonia'', 17 ''concerto'' rag piano, h.e.
 
+=== Operau ===
+* ''Die Schuldigkeit des ersten Gebotes'', K. 35 (1767) 
+* ''Apollo et Hyacinthus'', K. 38 (1767) 
+* ''Bastien et Bastienne'', K. 50 (1768) 
+* ''La finta semplice'', K. 51 (1768) 
+* ''Mitridate'', K. 87 (1770) 
+* ''Ruggiero'' (1771) 
+* ''Ascanio in Alba'', K. 111 (1771) 
+* ''Betulia Liberata'', K. 118 (1771)
+* ''Il sogno di Scipione'', K. 126 (1772) 
+* ''Lucio Silla'', K. 135 (1772) 
+* ''Thamos, König in Ägypten'' (1773, 1775) 
+* ''La finta giardiniera'', K. 196 (1774) 
+* ''Il rè pastore'', K. 208 (1775) 
+* ''Zaide'', K. 344 (1779) 
+* ''Idomeneo'', K. 366 (1780)
+* ''Die Entführung aus dem Serail'' neu ''Il Seraglio'', K. 384 (1782) 
+* ''L'oca del Cairo'', K. 422 
+* ''Lo sposo deluso'', K. 430 
+* ''Der Schauspieldirektor'', K. 486 
+* ''[[Le nozze di Figaro]]'', K. 492 (1786) 
+* ''Don Giovanni'', K. 527 (1787) 
+* ''Così fan tutte'', K. 588 (1789) 
+* ''Die Zauberflöte'', K. 620 (1791)
+* ''La clemenza di Tito'', K. 621 (1791)
+
+
 {{stokk-tus}}
 
 [[Class:Ylow|Mozart]]
@@ -98,7 +125,7 @@
 [[mt:Wolfgang Amadeus Mozart]]
 [[mwl:Mozart]]
 [[my:မိုးဇက်]]
-[[mzn:موزارت]]
+[[mzn:موزات]]
 [[nah:Wolfgang Amadeus Mozart]]
 [[nds:Wolfgang Amadeus Mozart]]
 [[nds-nl:Wolfgang Amadeus Mozart]]
@@ -106,6 +133,7 @@
 [[nl:Wolfgang Amadeus Mozart]]
 [[nn:Wolfgang Amadeus Mozart]]
 [[no:Wolfgang Amadeus Mozart]]
+[[nv:Hastiin Wolfgang Amadeus Mozart]]
 [[oc:Wolfgang Amadeus Mozart]]
 [[os:Моцарт, Вольфганг Амадей]]
 [[pag:Wolfgang Amadeus Mozart]]
