*Empty MediaWiki Message*

--- a/Eynda.mw
+++ b/Eynda.mw
@@ -72,6 +72,34 @@ Yma kryjyansow Eyndek ow synsi ynni [[Hindoueth]] hag [[Islam]], [[Kristoneth]] 
 
 An taves chyf a Eynda Gledh yw [[Hindi]], mes yma [[Yeth ranndiryel|yethow ranndiryel]] erell gansa milyonow pals a gewsoryon: [[Marathi]], [[Telougou]], [[Tamil]], [[Bengalek]], [[Goujarati]], [[Kannada]], [[Panjabi]], [[Oriya]], [[Malayalam]], [[Assamek]], [[Maythili]], [[Kashmiri]], h.e. Yma studh soedhogel dhe'n tavosow ma, warbarth gans [[Sowsnek]] (kewsys gans lies person avel nessa yeth), [[Sindhi]], [[Nepalek]], [[Dogari]], [[Santali]] ha [[Sanskrit]].
 
+{| class="wikitable sortable"
+|-
+| 1 || [[Mumbai]] || 12.478.447
+|-
+| 2 || [[Delhi]] || 16.753.235
+|-
+| 3 ||[[Bangalore]] || 9.588.910
+|-
+| 4 || [[Kolkata]] || 4.486.679
+|-
+| 5 || [[Chennai]] || 4.681.087
+|-
+| 6 || [[Hyderabad (India)| Hyderabad]] || 4.010.238
+|-
+| 7 || [[Ahmedabad]] || 5.570.585
+|-
+| 8 || [[Pune]]  ||  3.446.330
+|-
+| 9 || [[Surat]] || 5.064.519
+|-
+| 10 || [[Kanpur]] || 6.368.043
+|-
+| 11 || [[Jaipur]] || 3.910.570 
+|-
+| 12 || [[Lucknow]] || 4.681.416
+|}
+
+
 
 {{Asi}}
 
