*Empty MediaWiki Message*

--- a/Eynda.mw
+++ b/Eynda.mw
@@ -72,6 +72,11 @@ Yma kryjyansow Eyndek ow synsi ynni [[Hindoueth]] hag [[Islam]], [[Kristoneth]] 
 
 An taves chyf a Eynda Gledh yw [[Hindi]], mes yma [[Yeth ranndiryel|yethow ranndiryel]] erell gansa milyonow pals a gewsoryon: [[Marathi]], [[Telougou]], [[Tamil]], [[Bengalek]], [[Goujarati]], [[Kannada]], [[Panjabi]], [[Oriya]], [[Malayalam]], [[Assamek]], [[Maythili]], [[Kashmiri]], h.e. Yma studh soedhogel dhe'n tavosow ma, warbarth gans [[Sowsnek]] (kewsys gans lies person avel nessa yeth), [[Sindhi]], [[Nepalek]], [[Dogari]], [[Santali]] ha [[Sanskrit]].
 
+
+
+
+== Citys yn Eynda ==
+
 {| class="wikitable sortable"
 |-
 | 1 || [[Mumbai]] || 12.478.447
@@ -100,6 +105,12 @@ An taves chyf a Eynda Gledh yw [[Hindi]], mes yma [[Yeth ranndiryel|yethow rannd
 |}
 
 
+
+
+
+
+== Gwiasva ==
+* [http://www.coj.net/default.htm www.coj.net]
 
 {{Asi}}
 
