*Empty MediaWiki Message*

--- a/Bangalore.mw
+++ b/Bangalore.mw
@@ -1,6 +1,6 @@
 [[Restren:BangaloreMontage.png|thumb|right|250px|Gwel Bangalore]]
 [[Restren:Bangalore in India.png|thumb|right|250px|]]
-'''Bangalore''' ([[Kannada]]: ಬೆಂಗಳೂರು, ‎''Bengaḷūru'') yw cita yn [[Eynda]]. Yma a-dro dhe 6,562,408 a dus ow triga yn Bangalore.
+'''Bangalore''' ([[Kannadek]]: ಬೆಂಗಳೂರು, ‎''Bengaḷūru'') yw cita yn [[Eynda]]. Yma a-dro dhe 6,562,408 a dus ow triga yn Bangalore.
 
 
 
