--- a/Eynda.mw
+++ b/Eynda.mw
@@ -110,7 +110,7 @@ An taves chyf a Eynda Gledh yw [[Hindi]], mes yma [[Yeth ranndiryel|yethow rannd
 
 
 == Gwiasva ==
-* [http://www.coj.net/default.htm www.coj.net]
+* [http://india.gov.in/ india.gov.in]
 
 {{Asi}}
 
