*Empty MediaWiki Message*

--- a/Delhi.mw
+++ b/Delhi.mw
@@ -24,7 +24,7 @@
 |Amser || UTC +5:30
 |}
 
-'''Delhi''' ([[Hind]]i: '''दहली''', [[Urdu]]: '''دہلی dehlī''') yw an vrassa sita yn [[Eynda]].
+'''Delhi''' ([[Hindik]]: '''दहली''', [[Urdu]]: '''دہلی dehlī''') yw an vrassa sita yn [[Eynda]].
 
 {{stokk-dor}}
 
