--- a/Kanpur.mw
+++ b/Kanpur.mw
@@ -1,6 +1,6 @@
 [[Restren:Kanpurskyline.jpg|thumb|right|250px|Gwel Kanpur]]
 [[Restren:Uttar Pradesh district location map Kanpur Dehat.svg|thumb|right|250px|]]
-'''Kanpur''' ([[Hindik]]: कानपुर; [[Hindoustanek|Urdu]]: کان پور) yw cita yn [[Eynda]]. Yma a-dro dhe 6,368,043 a dus ow triga yn Kanpur.
+'''Kanpur''' ([[Hindoustanek|Hindik]]: कानपुर; [[Hindoustanek|Urdu]]: کان پور) yw cita yn [[Eynda]]. Yma a-dro dhe 6,368,043 a dus ow triga yn Kanpur.
 
 
 
