--- a/Danmark.mw
+++ b/Danmark.mw
@@ -22,7 +22,7 @@
 |-
 |Myghternes || [[Margrethe II]]
 |-
-|Pennmenyster || [[Lars Løkke Rasmussen]]
+|Pennmenyster || [[Helle Thorning-Schmidt]]
 |-
 |[[Enep]] || 43,094 km²
 |-
