*Empty MediaWiki Message*

--- a/Jaipur.mw
+++ b/Jaipur.mw
@@ -1,6 +1,6 @@
 [[Restren:Jaipur Montage.png |thumb|right|250px|Gwel Jaipur]]
 [[Restren:India map mod.png |thumb|right|250px|]]
-'''Jaipur''' ([[Rajasthanik]]: जैपर, [[Hindik]]: जयपुर;) yw cita yn [[Eynda]]. Yma a-dro dhe 3,910,570 a dus ow triga yn Jaipur.
+'''Jaipur''' ([[Rajasthanik]]: जैपर, [[Hindi|Hindik]]: जयपुर;) yw cita yn [[Eynda]]. Yma a-dro dhe 3,910,570 a dus ow triga yn Jaipur.
 
 
 
