*Empty MediaWiki Message*

--- a/Lucknow.mw
+++ b/Lucknow.mw
@@ -1,6 +1,6 @@
 [[Restren:Lucknow-city.jpg|thumb|right|250px|Gwel Lucknow]]
 [[Restren:Overzichtskaart Lucknow.PNG|thumb|right|250px|]]
-'''Lucknow''' ([[Hindik]]: लखनऊ; [[Urdu]]: لکھنؤ, ''Lakhnaū'') yw cita yn [[Eynda]]. Yma a-dro dhe 4,681,416 a dus ow triga yn Lucknow.
+'''Lucknow''' ([[Hindi|Hindik]]: लखनऊ; [[Urdu]]: لکھنؤ, ''Lakhnaū'') yw cita yn [[Eynda]]. Yma a-dro dhe 4,681,416 a dus ow triga yn Lucknow.
 
 
 
