*Empty MediaWiki Message*

--- a/Sether.mw
+++ b/Sether.mw
@@ -1,1 +1,3 @@
-'''Sether''' ''(Morus bassanus)'' yw eghenn a [[edhen]] a'n mor.
+'''Sether''' ''(Morus bassanus)'' yw eghenn a [[edhen]] a'n mor. 
+
+[[en:Gannet]]
