*Empty MediaWiki Message*

--- a/Sether.mw
+++ b/Sether.mw
@@ -1,3 +1,5 @@
+[[Restren:Morus bassanus 9.jpg|thumb|right|'''Sether''' war [[Helgoland]] yn [[Almayn]]]]
+
 '''Sether''' ''(Morus bassanus)'' yw eghenn a [[edhen]] a'n mor. 
 
 [[en:Gannet]]
