*Empty MediaWiki Message*

--- a/Henhwedhlow.mw
+++ b/Henhwedhlow.mw
@@ -1,1 +1,3 @@
 [[Henhwedhlow]] yw drollow po hwedhlow a termyn eus passyes a-rag skrifennow istorek, haval dhe [[Henhwedhlow Kernewek]].
+
+[[en:Legend]]
