--- a/Turki.mw
+++ b/Turki.mw
@@ -44,6 +44,22 @@
 '''Turki''' yw repoblek yn [[Asi]] west hag [[Europa]] soth-est. A-dro dhedhi yma [[Syri]], [[Irak]], [[Iran]], [[Aserbayjan]], [[Armeni]], [[Pow Grousi]], [[Bulgari]] ha [[Pow Grek]]. [[Kyproes]] usi ogas a-dreus rann a'n mor.
 
 
+==Gallery==
+<gallery>
+File:MustafaKemalAtaturk.jpg| Mustafa Kemal Atatürk
+File:Aya sofya.jpg|  
+File:Anitkabir.HB.jpg|  
+File:Kocatepe Mosque Ankara.jpg|  
+File:067 Etnografya.05.2006 resize.JPG| 
+File:DolmabahceMainGate.JPG| 
+File:İzmir clock tower.jpg| 
+File:Pamukkale00.JPG|  
+File:Eskişehir-Aycan.jpg|  
+File:Antalya falezler.jpg| 
+File:Alanya.jpg|  
+File:Bluemosquefront.jpg| 
+File:Diyarbakir P1050751 20080427135832.JPG| 
+</gallery>
 {{Stokk-europa}}
 {{Europa}}
 
