--- a/Marghsylli.mw
+++ b/Marghsylli.mw
@@ -1,5 +1,5 @@
 [[Restren:Meuble héraldique Dragon (wyvern).svg|thumb|right|Marghsylli a [[kota arvow]]]]
 
-'''Marghsylli''' yw enyval mythologiek, haval dhe [[pryv]] po [[sarf]] bras, mes gans eskelli ha penn haval dhe [[dragon]]. Yma ev yn [[henhwedhlow]] hag yn [[kota arvow|kotow arvow]].
+'''Marghsylli''' yw enyval mythologiek, haval dhe [[pryv]] po [[sarf]] bras, mes gans eskelli ha penn haval dhe [[dragon]] ha dewdroes haval dhe [[Bogan Yar]]. Yma hi yn [[henhwedhlow]] hag yn [[kota arvow|kotow arvow]].
 
 [[en:Wyvern]]
