*Empty MediaWiki Message*

--- a/Sether.mw
+++ b/Sether.mw
@@ -1,6 +1,6 @@
 [[Restren:Morus bassanus 9.jpg|thumb|right|'''Sether''' war [[Helgoland]] yn [[Almayn]]]]
 
-'''Sether''' ''(Morus bassanus)'' yw eghenn a [[edhen]] a'n mor. An sether yw haval dhe gwarak ha seth.
+'''Sether''' ''(Morus bassanus)'' yw eghenn a [[edhen]] a'n [[mor]]. An sether yw haval dhe gwarak ha seth.
 
 [[Class:Enyvales]]
 
