*Empty MediaWiki Message*

--- a/Bogan_Yar.mw
+++ b/Bogan_Yar.mw
@@ -1,5 +1,9 @@
 [[Restren:DragonTransom.jpg|thumb|right|Bogan Yar yn [[Evrek Nowydh]]]]
 
-Bogan Yar yw enyval mythologiek, haval dhe [[pryv]], [[sarf]] bras po [[dragon]], mes gans eskelli ha dewdroes haval dhe [[Marghsylli]] ha penn an [[kulyek]]. Yma hi yn [[henhwedhlow]] hag yn kotow arvow.
+Bogan Yar yw enyval mythologiek, haval dhe [[pryv]], [[sarf]] bras po [[dragon]], mes gans eskelli ha dewdroes haval dhe [[Marghsylli]] ha penn an [[kulyek]]. 
+
+An Bogan Yar yw haval dhe [[Bogan Sarf]]. An Bogan Yar yw oy Kulyek a goras yndan kroenek, mes an Bogan Sarf yw oy kroenek po oy sarf a goras yndan Kulyek.
+
+Yma hi yn [[henhwedhlow]] hag yn kotow arvow.
 
 [[en:Cockatrice]]
