*Empty MediaWiki Message*

--- a/Bogan_Sarf.mw
+++ b/Bogan_Sarf.mw
@@ -1,6 +1,6 @@
 [[Restren:Bertuch-Basilisk.png|thumb|right|Bogan Sarf yn Fabelwesen gans Friedrich Bertuch]]
 
-[[Bogan Sarf]] ([[Grek]] ''βασιλίσκος basilískos,'' "myghtern byghan;" Latin ''Regulus'') yw enyval mythologiek, haval dhe [[pryv]], [[sarf]] bras po [[dragon]], mes gans eskelli ha dewdroes haval dhe [[Marghsylli]] ha penn an [[kulyek]]. An Bogan Sarf yw pur [[gwenonek]].
+[[Bogan Sarf]] ([[Greka]] ''βασιλίσκος basilískos,'' "myghtern byghan;" [[Latin]] ''Regulus'') yw enyval mythologiek, haval dhe [[pryv]], [[sarf]] bras po [[dragon]], mes gans eskelli ha dewdroes haval dhe [[Marghsylli]] ha penn an [[kulyek]]. An Bogan Sarf yw pur [[gwenonek]].
 
 An Bogan Sarf yw haval dhe [[Bogan Yar]]. An Bogan Sarf yw [[oy]] [[kroenek]] po oy sarf a goras yndan Kulyek, mes an Bogan Yar yw oy Kulyek a goras yndan kroenek.
 
