*Empty MediaWiki Message*

--- a/Marghkell.mw
+++ b/Marghkell.mw
@@ -1,5 +1,5 @@
 [[Restren:Pegasus iran.jpg|thumb|right|Marghkell a [[Iran]]]]
 
-'''Marghkell''' (Greka ''Πήγασος/Pegasos'', Latin ''Pegasus'') yw [[enyval]] mythologiek, haval dhe [[margh]] mes gans eskelli. Fentynyow a wrussa omdhiskwedhes yn y olow karn. Ev a wrussa kyrghes lughesennow rag Zeus. Y dama o Medusa an Gorgon hag y sira o Poseidon an mor duw. 
+'''Marghkell''' ([[Greka]] ''Πήγασος/Pegasos'', [[Latin]] ''Pegasus'') yw [[enyval]] mythologiek, haval dhe [[margh]] mes gans eskelli. Fentynyow a wrussa omdhiskwedhes yn y olow karn. Ev a wrussa kyrghes lughesennow rag Zeus. Y dama o Medusa an Gorgon hag y sira o Poseidon an mor duw. 
 
 [[en:Pegasus]]
