--- a/Henhwedhlow.mw
+++ b/Henhwedhlow.mw
@@ -1,3 +1,5 @@
+[[Restren:Bertuch-fabelwesen.JPG|thumb|right|[[Enyval mythologiek]] yn Fabelwesen gans Friedrich Bertuch]]
+
 [[Henhwedhlow]] yw drollow po hwedhlow a termyn eus passyes a-rag skrifennow istorek, haval dhe [[Henhwedhlow Kernewek]].
 
 [[en:Legend]]
