*Empty MediaWiki Message*

--- a/Henhwedhlow.mw
+++ b/Henhwedhlow.mw
@@ -1,4 +1,4 @@
-[[Restren:Bertuch-fabelwesen.JPG|thumb|right|[[Enyval mythologiek]] yn Fabelwesen gans Friedrich Bertuch]]
+[[Restren:Bertuch-fabelwesen.JPG|thumb|right|500px|[[Enyvales mythologiek]] yn Fabelwesen gans Friedrich Bertuch]]
 
 [[Henhwedhlow]] yw drollow po hwedhlow a termyn eus passyes a-rag skrifennow istorek, haval dhe [[Henhwedhlow Kernewek]].
 
