*Empty MediaWiki Message*

--- a/Mor_Baltek.mw
+++ b/Mor_Baltek.mw
@@ -1,1 +1,3 @@
 '''Mor Baltek''' yw mor yntra [[Danmark]], [[Swedherwyk]], [[Estoni]], [[Pow Finn]], [[Almayn]], [[Latvi]], [[Lithouani]], [[Poloni]], ha [[Russi]].
+
+[[en:Baltic sea]]
