*Empty MediaWiki Message*

--- a/Mor_Baltek.mw
+++ b/Mor_Baltek.mw
@@ -1,3 +1,5 @@
+[[Restren:BalticSea March2000 NASA-S2000084115409 md.jpg|thumb|right|An Baltek yn [[gwav]]]]
+
 '''Mor Baltek''' yw mor yntra [[Danmark]], [[Swedherwyk]], [[Estoni]], [[Pow Finn]], [[Almayn]], [[Latvi]], [[Lithouani]], [[Poloni]], ha [[Russi]].
 
 [[en:Baltic sea]]
