--- a/Can_an_Pescador_Kernûak.mw
+++ b/Can_an_Pescador_Kernûak.mw
@@ -18,3 +18,6 @@ Dheso en lên offrenny ny a wra.
 :''Burdhen''
 :Crîst, Mab Marîa, Steren an Mor,
 :Golsow ha gortheb pesadow pescador.
+
+[[Class:Henry Jenner]]
+[[Class:Canow en Kernowek]]
