--- a/Devedhyans_an_Matern.mw
+++ b/Devedhyans_an_Matern.mw
@@ -35,3 +35,6 @@ Lowenen; ottama 'gan Matern ny.<br/>
 Hedhew a'n dra a wharfo na woleugh.<br/>
 Ogas dhoy Stevel-Trôn heb own deugh why;<br/>
 Marîa'n Vaternes a elow dheugh.
+
+[[Class:Henry Jenner]]
+[[Class:Canow en Kernowek]]
