*Empty MediaWiki Message*

--- a/Gaborone.mw
+++ b/Gaborone.mw
@@ -1,3 +1,24 @@
+{{Sita Infobox
+| Hanow = Gaborone
+| restren = Gaborone_Montage.png
+| kaption = Sita Gaborone
+| restren_map = 
+| kaption_map = 
+| Leshanow = Gabs, GC, Gabz, G-City
+| Kenedhel = [[Botswana]]
+| pow = 
+| Stat = 
+| Konteth = 
+| Mayour = Harry Mothei
+| Enep=169
+| Poblans = 228166
+| PoblansYear = 2010
+| Doesedh = 1101
+| HanowAnDrigoryon = 
+| Amser = UTC+2
+| gwiasva = 
+}}
+
 '''Gaborone''' yw pencyta [[Botswana]].
 
 {{KUA}}
