*Empty MediaWiki Message*

--- a/Gaborone.mw
+++ b/Gaborone.mw
@@ -2,7 +2,7 @@
 | Hanow = Gaborone
 | restren = Gaborone_Montage.png
 | kaption = Sita Gaborone
-| restren_map = 
+| restren_map = BW-Gaborone.png
 | kaption_map = 
 | Leshanow = Gabs, GC, Gabz, G-City
 | Kenedhel = [[Botswana]]
