--- a/Chad.mw
+++ b/Chad.mw
@@ -4,7 +4,7 @@
 | colspan="2" style="background:#efefef;" align="center" |
 {| style="background:#efefef;"
 |align="center" | [[Restren:Flag of Chad.svg|150px|Baner Chad]]
-|align="center" width="140px"| [[Restren:Chad coat of arms.png|110px|Kota arvow Chad]]
+|align="center" width="140px"| [[Restren:Coat of arms of Chad.svg|110px|Kota arvow Chad]]
 |- align="center" width="140px"
 | (Baner Chad) 
 | (Kota arvow Chad)
