--- a/Iseldiryow.mw
+++ b/Iseldiryow.mw
@@ -22,7 +22,7 @@
 |-
 |Myghternes || [[Beatrix a Iseldiryow|Beatrix]]
 |-
-|Pennmenyster || [[Jan Peter Balkenende]]
+|Pennmenyster || [[Mark Rutte]]
 |-
 |[[Enep]] || 41,526 km²
 |-
