--- a/Bibel.mw
+++ b/Bibel.mw
@@ -71,17 +71,7 @@ An Yedhewon a dhegemmer an Testament Koth (henwys ynwedh an Bibel [[Ebrow]], po 
 ** [[Epystyl Sen Yud]]
 ** [[Diskwedhyans Yowann]]
 
-== An Bibel yn [[Kernewek]] ==
-
-A-dhia gansblydhynyow, an Bibel y'n tavosow [[Kembrek]] ha [[Bretonek]] a veu dyllys. An bibel Kembrek o skrifys gans [[William Morgan]] yn [[16ves kansblydhen|1588]] ha'n Testamenth Nowydh Bretonek gans [[Yann-Frañsez ar Gonideg]] yn [[1827]].
-
-Temmigow an Bibel o treylys yn Kernewek y'n [[18ves kansblydhen]], avel lyver [[Jenesis]] ha [[Mathew]] gans [[John Keigwin]], [[John Boson]] ha [[Wella Rowe]].
-
-A-dhia [[1996]], kesoberoryon Epskop [[Truru]] a veu yn bysi ow treylya an Bibel oll yn Kernewek. 
-
-[[Nicholas Williams]] a wrug treylyans diberth a'n Testament Nowydh ynwedh yn [[2002]].
-
-Treylyans yn Kernewek Kemmyn an Testament Nowydh a veu lonchys yn [[Eglos Sen Petrok]] yn [[Mys Est|mis-Est]] [[2004]].
+* [[An Bibel yn Kernewek]]
 
 == Kampoellansow ==
 
