*Empty MediaWiki Message*

--- a/An_Bibel_yn_Kernewek.mw
+++ b/An_Bibel_yn_Kernewek.mw
@@ -1,4 +1,4 @@
-A-dhia gansblydhynyow, an Bibel y'n tavosow [[Kembrek]] ha [[Bretonek]] a veu dyllys. An bibel Kembrek o skrifys gans [[William Morgan]] yn [[16ves kansblydhen|1588]] ha'n Testamenth Nowydh Bretonek gans [[Yann-Frañsez ar Gonideg]] yn [[1827]].
+A-dhia gansblydhynyow, an [[Bibel]] y'n tavosow [[Kembrek]] ha [[Bretonek]] a veu dyllys. An bibel Kembrek o skrifys gans [[William Morgan]] yn [[16ves kansblydhen|1588]] ha'n Testamenth Nowydh Bretonek gans [[Yann-Frañsez ar Gonideg]] yn [[1827]].
 
 Temmigow an Bibel o treylys yn Kernewek y'n [[18ves kansblydhen]], avel lyver [[Jenesis]] ha [[Mathew]] gans [[John Keigwin]], [[John Boson]] ha [[Wella Rowe]].
 
@@ -7,6 +7,8 @@ A-dhia [[1996]], kesoberoryon Epskop [[Truru]] a veu yn bysi ow treylya an Bibel
 [[Nicholas Williams]] a wrug treylyans diberth a'n Testament Nowydh ynwedh yn [[2002]].
 
 Treylyans yn Kernewek Kemmyn an Testament Nowydh a veu lonchys yn [[Eglos Sen Petrok]] yn [[Mys Est|mis-Est]] [[2004]].
+
+* [http://www.bibelkernewek.com/index.htm Ni a'th wolkomm dhe wiasva Projekt an Bibel Kernewek!]
 
 [[Class:Yedhoweth]]
 [[Class:Kristoneth]]
