*Empty MediaWiki Message*

--- a/E.G._Retallack_Hooper.mw
+++ b/E.G._Retallack_Hooper.mw
@@ -5,7 +5,7 @@ prev=[[Robert Morton Nance|Mordon]]|
 list=[[Bardh Meur]]'''<br />1959–1964|
 next=[[George Pawley White|Gunwyn]]|
 }}
-
+* [[An Bibel yn Kernewek]]
 {{stokk-tus}}
 
 {{Porth Kernow}}
