--- a/Henry_Jenner.mw
+++ b/Henry_Jenner.mw
@@ -23,6 +23,7 @@ prev=''(kynsa y'n soedh)''|
 list=[[Bardh Meur]]'''<br >1928&ndash;1934|
 next=[[Robert Morton Nance|Mordon]]|
 }}
+* [[An Bibel yn Kernewek]]
 
 == Kevrennow yn-mes ==
 * [http://www.gorsethkernow.org.uk/kernewek/pycturva/byrthveor/kgwasmyg.htm Gwiasva Gorseth Kernow a-dro dhodho]
