*Empty MediaWiki Message*

--- a/Bom_Bras.mw
+++ b/Bom_Bras.mw
@@ -1,1 +1,1 @@
-An '''Bom Bras''', po an '''Big Bang''' yw hanow dybieth a dro dhe dhalleth an Univers.
+An '''Bom Bras''', po an '''Big Bang''' yw hanow dybieth a dro dhe dhalleth an Univers. Yn arbennik, an dybieth a dhispleg fatell omlesas an universe a boynt dosedh didhiwedh.
