*Empty MediaWiki Message*

--- a/Bom_Bras.mw
+++ b/Bom_Bras.mw
@@ -1,1 +1,3 @@
 An '''Bom Bras''', po an '''Big Bang''' yw hanow dybieth a dro dhe dhalleth an Univers. Yn arbennik, an dybieth a dhispleg fatell omlesas an univers a boynt dosedh didhiwedh dh'y studh a-lemmyn.
+
+{{is-stokk}}
