--- a/Repoblek_Turkek_Kobros_Kledh.mw
+++ b/Repoblek_Turkek_Kobros_Kledh.mw
@@ -45,8 +45,8 @@
 
 == Links ==
 
-* [http://www.northcyprus.de/ North Cyprus Times]
-* [http://www.zypern.cc/ Northern Cyprus Almanac]
+* [http://www.zypern.cc/ North Cyprus Times]
+* [http://www.zypern.cc/nordzypern/ Northern Cyprus Almanac]
 
 {{unn k}}
 {{Stokk-europa}}
