*Empty MediaWiki Message*

--- a/Kembrek.mw
+++ b/Kembrek.mw
@@ -2,10 +2,10 @@
 ! colspan="2" bgcolor="#ffdebb" style="font-size:110%"| Kembrek ''(Cymraeg)''
 |-
 | valign="top"|Kewsys yn:
-|[[Kembra]], [[Arghantina]], [[Pow Sows]], powyow erell
+|[[Kembra]] (611.000), [[Pow Sows]] (150.000), [[Arghantina]] (25.000), powyow erell
 |-
 | valign="top"|Kembregoryon:
-|750 000+
+|791 000+
 |-
 | valign="top"|Klasyans genynnek:
 |[[Eyndo-Europek]]<br />
